# Vertex-AI-Setup-Tool

./: .env  Cargo.toml  Makefile  README.md  extracted_data.json  extracted_data_structured.json
src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  pdf.rs  queue.rs  setup.rs  vertex_ai.rs
