[package]
name = "hvertex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dotenv = "0.15"
colored = "2.0"  # For colorful terminal output
anyhow = "1.0"   # For easier error handling
