[package]
name = "hvertex"
version = "0.1.2"
edition = "2021"
authors = ["Hamze Ghalebi <ghalebi@gmail.com>"]
description = "A powerful command-line tool for setting up and testing Google Cloud Vertex AI integration"
license = "MIT"
repository = "https://github.com/RustSandbox/Vertex-AI-Setup-Tool"
readme = "README.md"
keywords = ["vertex-ai", "google-cloud", "ai", "machine-learning", "cli"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
homepage = "https://github.com/RustSandbox/Vertex-AI-Setup-Tool"
documentation = "https://docs.rs/hvertex"

[dependencies]
anyhow = "1.0"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
dialoguer = "0.11"
thiserror = "1.0"
base64 = "0.22.1"
regex = "1.11.1"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
indicatif = "0.17.11"

[dev-dependencies]
doc-comment = "0.3"
